--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@
                     </div>
                     <div class="badge">
                         <i class="fas fa-car"></i>
-                        <span data-en="Driver A & B" data-id="SIM A & B">SIM A & B</span>
+                        <span data-en="Driver A & C" data-id="SIM A & B">SIM A & B</span>
                     </div>
                     <div class="badge">
                         <i class="fas fa-globe"></i>
@@ -1403,7 +1403,7 @@
                     <div class="plan-card">
                         <div class="plan-icon">🚗</div>
                         <h4 data-en="Driving Services" data-id="Layanan Berkendara">Layanan Berkendara</h4>
-                        <p data-en="Licensed driver (A & B)" data-id="Pengemudi berlisensi (A & B)">Pengemudi berlisensi (A & B)</p>
+                        <p data-en="Licensed driver (A & C)" data-id="Pengemudi berlisensi (A & B)">Pengemudi berlisensi (A & B)</p>
                     </div>
                 </div>
             </div>
@@ -1994,4 +1994,5 @@
         });
     </script>
 </body>
+
 </html>
